@@ -12,6 +12,7 @@
     * 3970 SEC: Fixed possible URL injection on index page...
     * 4037 FIX: Fix graphs that have optional metrics...
     * 3974 FIX: Sorting comments in hover menu of comments icon by time now
+    * 4040 FIX: Fix error in view about "No WATO folder ..." in case of host imported via cmcdump...
 
 
 1.2.8p13:
